# pinn-power-flow

./: .gitignore  README.md  data_generation.py  evaluate_model.py  main.py  net.py  pi_layer.py  pi_loss.py  preprocessing.py  pyproject.toml  run_pinn.py  tutorial.py
data/: Ybus.npz  best_model_pi.pt  ieee_14.csv
